src/test/resources/refCompilerOutput/invalid/semanticErr/function/functionBadArgUse.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 13:13 -- Incompatible type at x (expected: BOOL, actual: INT)
